# superprac

./: README.md
task1/pam-lomonosov/: .gitignore  CMakeLists.txt  main.cpp
task1/pam-lomonosov/cout/: 20_1000_700.txt  20_1000_800.txt  20_1500_160.txt  20_8.txt
task1/pam-lomonosov/data/: generate.py  generate.sh
task1/pam-lomonosov/results/: 20_1000_1.json  20_1000_100.json  20_1000_128.json  20_1000_200.json  20_1000_300.json  20_1000_400.json  20_1000_500.json  20_1000_600.json  20_1250_1.json  20_1250_100.json  20_1250_200.json  20_1250_300.json  20_1500_1.json  20_1500_100.json  20_1500_200.json  20_1500_300.json  20_1750_1.json  20_1750_100.json  20_1750_200.json  20_1750_300.json  20_2000_1.json  20_2000_100.json  20_2000_200.json  20_2000_300.json  20_2250_1.json  20_2250_100.json  20_2250_200.json  20_2250_300.json  20_2500_1.json  20_2500_100.json  20_2500_200.json  20_2750_1.json  20_2750_100.json  20_2750_200.json  20_3000_1.json  20_3000_100.json  20_3000_200.json  20_3250_1.json  20_3250_100.json  20_3250_200.json  (+21 more)
task1/pam-lomonosov/results_small/: 20_1000_100.json  20_1000_101.json  20_1000_128.json  20_1000_16.json  20_1000_160.json  20_1000_192.json  20_1000_224.json  20_1000_256.json  20_1000_32.json  20_1000_320.json  20_1000_384.json  20_1000_448.json  20_1000_48.json  20_1000_50.json  20_1000_51.json  20_1000_512.json  20_1000_64.json  20_1000_8.json  20_1000_99.json  20_1250_100.json  20_1250_101.json  20_1250_128.json  20_1250_16.json  20_1250_160.json  20_1250_192.json  20_1250_224.json  20_1250_256.json  20_1250_32.json  20_1250_320.json  (+294 more)
(+27 files in other folders)
